[package]
name = "redirect"
edition = "2018"
version = "0.1.0"
authors = ["zephyr <i@zephyr.moe>"]
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.9"
regex = "1.5"
futures = "0.3"
tokio = { version = "1.10", features = ["rt", "net", "io-util"] }

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0